# DesktopInterface

./: CMakeLists.txt
css/: styles.css
include/: Window.hpp
poc/gtk_test/: a.out  main.cpp
poc/x11_test/: a.out  main.cpp
resources/glade/: Window.glade~  Window.xml
src/: Window.cpp  main.cpp
